add compatibility with java 10